Grace/tests/gibbs/errors/t010.grace
// ERROR = P1001
var num := //123
